tests/test_files_pa3/SemanticErrors/LocalVarsNotInitB4Use13.ic
class A
{
	
	int b;
	
	static void main(string[] args) { }

	int a()
	{
		b = 5;
		int b;
		return b;
	}
}